--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	implementation 'org.springframework.integration:spring-integration-mqtt'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.integration:spring-integration-jdbc'
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
 	runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.3.2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
