--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ publishing {
 	}
 	publications {
 		gpr(MavenPublication) {
-			from(components.java)
+			artifact bootJar
+			artifactId bootJar.baseName
 		}
 	}
 }
