--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.testcontainers:postgresql:1.17.6'
 }
 
 tasks.named('test') {
